centered the tablea little more

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <p>You Have:</p>
       <p id="counter"></p>
 
-      <table>
+      <table class="table">
         <tr class="to-do">
           <th><h3>To-Do:</h3></th>
         </tr>
